# case_fastapi

backend/: docker-compose.yml  mydb.db  pyproject.toml
backend/src/: main.py
backend/src/api/: application.py
backend/src/database/: session.py
backend/src/models/: course.py  registration.py  user.py
backend/src/routers/: course.py  registration.py  user.py
backend/src/schema/: course.py  registration.py  user.py
backend/src/services/: course_service.py  registration_service.py  user_service.py
backend/src/tests/: test_course_endpoints.py  test_registration_endpoint.py  test_user_endpoints.py
frontend/: package-lock.json
frontend/src/app/(login)/: page.tsx
frontend/src/app/courses/: page.tsx
frontend/src/app/home/: page.tsx
frontend/src/components/: cardCourse.tsx  formDialog.tsx  header.tsx
frontend/src/services/: courseService.ts  registrationService.ts  userService.ts
frontend/src/types/: course.ts  registration.ts  user.ts
